tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Compiler-virtual-machine-interpreter' based on the file name 'compiler-virtual-machine-interpreter.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(168,25): error FS0001: The type 'obj' does not support a conversion to the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(188,31): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(189,52): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(193,61): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(198,52): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(206,52): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(211,52): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(213,41): error FS0001: The type 'obj' does not support a conversion to the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(218,37): error FS0001: The type 'obj' does not support a conversion to the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(222,52): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(231,52): error FS0039: The value or constructor 'slice' is not defined
